--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .happybirthday {
   margin: 20px auto;
   width: max-content;
-  font-size: 50px;
+  font-size: 10vw;
   font-family: sans-serif;
   color: white;
 }
